fix navbar overlap bug

--- a/src/index.css
+++ b/src/index.css
@@ -38,14 +38,14 @@
     }
 }
 
-.content-div {
+.project {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: 250px;
 }
 
-.content-div:hover {
+.project:hover {
     background-image: linear-gradient(#5bc0be, #6fffe9) !important;
     cursor: pointer;
 }
